--- a/tribute-freecodecamp-project/norman1.css
+++ b/tribute-freecodecamp-project/norman1.css
@@ -1,31 +1,34 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Helvetica Neue", Arial, sans-serif;
 }
 
-figcaption{
-    text-align: center;
+figcaption {
+  text-align: center;
 }
 main {
-    margin: 30px 8px;
-    padding: 15px;
-    border-radius: 5px;
-    background: #eee;
+  margin: 30px 8px;
+  padding: 15px;
+  border-radius: 5px;
+  background: #eee;
 }
-h1, p, h3{
-text-align:center;
+h1,
+p,
+h3 {
+  text-align: center;
 }
 p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 blockquote {
-    font-style: italic;
-    max-width: 545px;
-    margin: 0 auto 50px auto;
-    text-align: left;
+  font-style: italic;
+  max-width: 545px;
+  margin: 0 auto 50px auto;
+  text-align: left;
 }
 
 ul {
@@ -46,12 +49,12 @@ li {
   width: 50%;
 }
 #headline {
-    margin: 50px 0;
-    text-align: center;
+  margin: 50px 0;
+  text-align: center;
 }
 img {
-    max-width: 100%;
-    display: block;
-    height: auto;
-    margin: 0 auto;
+  max-width: 100%;
+  display: block;
+  height: auto;
+  margin: 0 auto;
 }
