--- a/survey-freecodecamp-project/style1.css
+++ b/survey-freecodecamp-project/style1.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap");
 
 :root {
   --color-white: #f3f3f3;
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.4;
@@ -24,7 +24,7 @@ body {
 
 /* mobile friendly alternative to using background-attachment: fixed */
 body::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
