--- a/jsdocumentation-freecodecamp-project/JsDocument.css
+++ b/jsdocumentation-freecodecamp-project/JsDocument.css
@@ -1,13 +1,12 @@
-body{
-    font-family: 'Open Sans', Arial, sans-serif;
-      color: #4d4e53;
+body {
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #4d4e53;
   line-height: 1.5;
-
 }
 header {
   color: black;
   margin: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 1.8em;
   font-weight: thin;
 }
@@ -28,24 +27,21 @@ section li {
   margin: 15px 0px 0px 20px;
 }
 code {
-    margin-left: -20px;
-    width: 100%;
-    padding: 15px;
-    padding-left: 10px;
-    padding-right: 45px;
-    min-width: 233px;
-  }
-#navbar{
-  border-color:rgba(0, 22, 22, 0.4);
-  left:0px;
-  top:0px;
-  border-right:solid rgba(0, 22, 22, 0.4);
-  width:300px;
-  height:100%;
-  min-width:290px;
-  position:fixed;
-
-  }
+  margin-left: -20px;
+  width: 100%; 
+  padding: 15px;
+  padding-left: 10px;
+  padding-right: 45px;
+}
+#navbar {
+  border-color: rgba(0, 22, 22, 0.4);
+  left: 0px;
+  top: 0px;
+  border-right: solid rgba(0, 22, 22, 0.4);
+  width: 300px;
+  height: 100%;
+  position: fixed;
+}
 #navbar ul {
   height: 88%;
   padding: 0;
@@ -53,22 +49,21 @@ code {
   overflow-x: hidden;
 }
 #navbar li {
-  color: #4d4e53;
   border-top: 1px solid;
   list-style: none;
   position: relative;
   width: 100%;
 }
-#navbar a{
-  cursor:pointer;
-  padding:10px 30px;
-  display:block;
-    text-decoration: none;
-
+#navbar a {
+  color: #4d4e53;
+  cursor: pointer;
+  padding: 10px 30px;
+  display: block;
+  text-decoration: none;
 }
-#main-doc{
-position:absolute;
-margin-left:310px;
+#main-doc {
+  position: absolute;
+  margin-left: 310px;
 }
 section article {
   color: #4d4e53;
