--- a/portfilo-freecodecamp-project/portfilo.css
+++ b/portfilo-freecodecamp-project/portfilo.css
@@ -1,14 +1,18 @@
-body{
-  font-family: 'Poppins', sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
 }
 .nav {
   font-size: 22px;
   top: 0;
   display: flex;
   justify-content: flex-end;
-  position: fixed;
-  width:100%;
-  background-color:#be3144;
+  position: sticky;
+  width: 100%;
+  background-color: #be3144;
 }
 .nav ul {
   display: flex;
@@ -20,14 +24,15 @@ body{
 li {
   list-style: none;
 }
-a{
+.nav a {
   padding: 20px;
+}
+a {
   color: #f0f0f0;
   text-decoration: none;
-
 }
 
-#welcome-section{
+#welcome-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,23 +40,23 @@ a{
 
   width: 100%;
   height: 100vh;
-  background-color: #000;}
-h1  {
-  font-family: 'Raleway', sans-serif;
+  background-color: #000;
+}
+h1 {
+  font-family: "Raleway", sans-serif;
   margin-bottom: 2px;
   font-size: 5rem;
   text-align: center;
   color: white;
 }
-h2  {
+h2 {
   top: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   margin-bottom: 2px;
   font-size: 42px;
   text-align: center;
   color: white;
   border-bottom: 0.2rem solid white;
-
 }
 
 .welcome-section p {
@@ -66,24 +71,24 @@ p {
   font-size: 3rem;
   text-align: center;
 }
-a{
+a {
   color: white;
 }
-.project-section{
+.project-section {
   background-color: #45567d;
 }
 .projects-section {
   text-align: center;
-  padding: 10rem 2rem;
+  padding: 6rem 1rem;
   background: #45567d;
 }
-.projects-grid{
+.projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-gap: 4rem;
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0px 90px 96px;
   margin-bottom: 6rem;
 }
 .projects-section-header {
@@ -91,7 +96,7 @@ a{
   margin: 0 auto 6rem auto;
 }
 .project-image {
- flex-grow: 2;
+  flex-grow: 2;
   width: 100%;
   object-fit: cover;
 }
@@ -106,32 +111,39 @@ a{
 }
 
 .project-title {
+  margin: 0;
   font-size: 20px;
-  padding: 20px 5px;  
+  padding: 20px 5px;
   background-color: #303841;
 }
 .project-title:hover .code {
   color: #ff7f50;
   transition: color 0.3s ease-out;
 }
-.code{
+.code {
   color: #303841;
-
 }
-.btn-show-all{
+.btn-show-all {
   background-color: #303841;
   padding: 10px 20px;
   text-align: center;
-  align-self:center ;
+  align-self: center;
 }
-.btn-show-all:hover  {
+.btn {
+  font-size: 20px;
+  display: inline-block;
+  padding: 1rem 2rem;
+  border-radius: 2px;
+}
+.btn-show-all:hover {
   background: #be3144;
-  
 }
-.btn-show-all:hover i{
+.btn-show-all:hover i {
   transform: translateX(30%);
 }
-.contact-section{
+.contact-section {
+  padding: 5rem 1rem;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,28 +152,28 @@ a{
   width: 100%;
   background-color: #303841;
 }
- p{
+p {
   font-size: 18px;
   color: #f0f0f0;
   font-style: italic;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-.contact-section h3{
-  font-size: 60px ;
+.contact-section h3 {
+  font-size: 60px;
   color: #f0f0f0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   text-decoration: none;
   margin: 0;
 }
 .contact-links {
-  font-size: 2.4rem;
-  display: flex
-
+  padding: 35px;
+  font-size: 24px;
+  display: flex;
 }
 .contact-section :hover {
   transform: translateY(8px);
 }
-.project{
+.project {
   display: flex;
   flex-direction: column;
 }
@@ -169,9 +181,9 @@ footer {
   font-weight: 300;
   display: flex;
   justify-content: space-evenly;
-margin: 0;
-  background:#303841;
-  border-top: 4px solid #be3144 ;
+  margin: 0;
+  background: #303841;
+  border-top: 4px solid #be3144;
 }
 
 footer > p {
