--- a/portfilo-freecodecamp-project/portfilo.css
+++ b/portfilo-freecodecamp-project/portfilo.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 .nav {
   font-size: 22px;
@@ -28,7 +29,8 @@ li {
   padding: 20px;
 }
 a {
-  color: #f0f0f0;
+  margin: 10px;
+  color: white;
   text-decoration: none;
 }
 
@@ -37,22 +39,20 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   width: 100%;
   height: 100vh;
-  background-color: #000;
+  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
-h1 {
+.welcome-section h1 {
   font-family: "Raleway", sans-serif;
   margin-bottom: 2px;
-  font-size: 5rem;
+  font-size: 60px;
   text-align: center;
   color: white;
 }
-h2 {
+.projects-section h2 {
   top: 0;
   font-family: "Raleway", sans-serif;
-  margin-bottom: 2px;
   font-size: 42px;
   text-align: center;
   color: white;
@@ -60,23 +60,13 @@ h2 {
 }
 
 .welcome-section p {
+  font-style: italic;
   margin-top: 0px;
-  font-size: 3rem;
+  font-size: 30px;
   text-align: center;
   color: #be3144;
 }
-p {
-  align-items: center;
-  margin-top: 0px;
-  font-size: 3rem;
-  text-align: center;
-}
-a {
-  color: white;
-}
-.project-section {
-  background-color: #45567d;
-}
+
 .projects-section {
   text-align: center;
   padding: 6rem 1rem;
@@ -125,16 +115,13 @@ a {
 }
 .btn-show-all {
   background-color: #303841;
-  padding: 10px 20px;
-  text-align: center;
   align-self: center;
-}
-.btn {
-  font-size: 20px;
+  font-size: 24px;
   display: inline-block;
   padding: 1rem 2rem;
   border-radius: 2px;
 }
+
 .btn-show-all:hover {
   background: #be3144;
 }
@@ -152,7 +139,7 @@ a {
   width: 100%;
   background-color: #303841;
 }
-p {
+.contact-section p {
   font-size: 18px;
   color: #f0f0f0;
   font-style: italic;
@@ -171,12 +158,13 @@ p {
   display: flex;
 }
 .contact-section :hover {
-  transform: translateY(8px);
+  transform: translateY(5px);
 }
 .project {
   display: flex;
   flex-direction: column;
 }
+
 footer {
   font-weight: 300;
   display: flex;
@@ -188,6 +176,7 @@ footer {
 
 footer > p {
   margin: 2rem;
+  color: #f0f0f0;
 }
 
 footer i {
